Update DisciplineTable color coding
- Change 0 points from light red to light grey with black text (points-0-grey class)
- Make Executive role use same color coding as Operator role
- Add new CSS class for grey 0 points styling

--- a/components/CodeComponents/RosterTable.css
+++ b/components/CodeComponents/RosterTable.css
@@ -215,6 +215,12 @@
   border-color: #fecaca;
 }
 
+.points-badge.points-0-grey {
+  background-color: #f3f4f6;
+  color: #111827;
+  border-color: #d1d5db;
+}
+
 .points-badge.points-10 {
   background-color: #fee2e2;
   color: #dc2626;
