--- a/styles/datagrid-pro.css
+++ b/styles/datagrid-pro.css
@@ -1,13 +1,7 @@
 /* MUI X DataGridPro global overrides for Positional Ratings component */
-/* Targeting both MuiDataGridPro-* (documentation) and MuiDataGrid-* (DOM) for maximum compatibility */
+/* Using actual rendered class names from DOM (MuiDataGrid-*) */
 
-/* COLUMN SEPARATORS - Hide completely (DataGridPro documentation classes) */
-.MuiDataGridPro-columnSeparator,
-.MuiDataGridPro-columnSeparator--resizable,
-.MuiDataGridPro-columnSeparator--sideRight,
-.MuiDataGridPro-columnSeparator--sideLeft,
-.MuiDataGridPro-columnSeparator--resizing,
-/* Also target DOM classes (rendered HTML) */
+/* COLUMN SEPARATORS - Hide all separators completely */
 .MuiDataGrid-columnSeparator,
 .MuiDataGrid-columnSeparator--resizable,
 .MuiDataGrid-columnSeparator--sideRight,
@@ -15,14 +9,16 @@
 .MuiDataGrid-columnSeparator--resizing {
   display: none !important;
   visibility: hidden !important;
-  width: 0px !important;
-  min-width: 0px !important;
+  width: 0 !important;
+  min-width: 0 !important;
+  max-width: 0 !important;
   opacity: 0 !important;
+  pointer-events: none !important;
 }
 
-.MuiDataGridPro-iconSeparator,
 .MuiDataGrid-iconSeparator {
   display: none !important;
   visibility: hidden !important;
+  opacity: 0 !important;
 }
 
