--- a/components/pages/AdminPage.module.css
+++ b/components/pages/AdminPage.module.css
@@ -116,7 +116,7 @@
   width: auto;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-UXPBeNJ4rrVx);
+  font-size: 24px;
   font-weight: 600;
   font-family: "Mont";
 }
