--- a/components/pages/HomePage.module.css
+++ b/components/pages/HomePage.module.css
@@ -82,13 +82,13 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  align-items: stretch;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: auto;
   max-width: var(--token-eC7sN0TdrMwT);
   min-width: 0;
-  padding: 8px;
+  padding: 16px 8px;
   border-bottom: 1px solid var(--token-bGw1ZBUIaR08);
 }
 .freeBox__bUa1M {
@@ -98,9 +98,9 @@
   width: 100%;
   height: auto;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   min-width: 0;
-  padding: 8px;
+  padding: 0px;
 }
 .freeBox___7DbEj {
   display: flex;
@@ -160,12 +160,11 @@
   min-width: 0;
 }
 .img {
-  object-fit: cover;
-  max-width: 150px;
+  object-fit: contain;
+  width: 150px;
+  height: auto;
   pointer-events: none;
-}
-.img > picture > img {
-  object-fit: cover;
+  flex-shrink: 0;
 }
 .freeBox__vZ6X {
   display: flex;
