--- a/components/pages/PeaClassicPage.module.css
+++ b/components/pages/PeaClassicPage.module.css
@@ -85,7 +85,8 @@
   height: auto;
   max-width: var(--token-eC7sN0TdrMwT);
   min-width: 0;
-  padding: 0px;
+  padding: 0px 0px 8px;
+  border-bottom: 1px solid var(--token-bGw1ZBUIaR08);
 }
 .freeBox__rv6F {
   display: flex;
@@ -126,7 +127,7 @@
   width: auto;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-UXPBeNJ4rrVx);
+  font-size: 24px;
   font-weight: 600;
   font-family: "Mont";
 }
