--- a/components/pages/OrgSettingsPage.module.css
+++ b/components/pages/OrgSettingsPage.module.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
   background: #ffffff;
 }
 
@@ -15,7 +15,7 @@
   left: 0px;
   top: 0px;
   z-index: 10;
-  position: sticky;
+  flex-shrink: 0;
 }
 
 .headerSection {
@@ -25,6 +25,7 @@
   align-items: center;
   background: #ffffff;
   padding: 16px;
+  flex-shrink: 0;
 }
 
 .headerContent {
@@ -61,9 +62,11 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  flex-grow: 1;
+  flex: 1;
   justify-content: center;
   padding: 16px;
+  overflow: hidden;
+  min-height: 0;
 }
 
 .mainContent {
@@ -72,12 +75,16 @@
   width: 100%;
   max-width: var(--token-eC7sN0TdrMwT);
   gap: 32px;
-  align-items: flex-start;
+  align-items: stretch;
+  height: 100%;
 }
 
 .contentArea {
   flex: 1;
   min-width: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .loadingContainer {
