--- a/components/pages/OrgSettingsPage.module.css
+++ b/components/pages/OrgSettingsPage.module.css
@@ -84,9 +84,8 @@
   flex: 1;
   min-width: 0;
   min-height: 0;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
+  overflow-y: auto;
+  padding-right: 8px;
 }
 
 .loadingContainer {
